# matrices

./: .gitignore  README.md  algorithm.py  experiments.py  kernel.py  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: ci.yml
docs/: benchmarking.md  extending.md  index.md
experiments/: data_collection.py  nystrom_k_to_opt_r.py
src/matrices/: __init__.py  cli.py  datasets.py  kernels.py  metrics.py  numerics.py  operators.py  results.py
src/matrices/benchmarks/: __init__.py  config.py  reporting.py  runner.py
src/matrices/benchmarks/suites/: __init__.py  openml_full.toml  poster_reference.toml  poster_scaling.toml  reference.toml  smoke.toml  synthetic.toml
src/matrices/experimental/: __init__.py  rpc2.py
src/matrices/methods/: __init__.py  base.py  cholesky.py  nystrom.py  projector.py
tests/: test_benchmarks.py  test_datasets.py  test_methods.py  test_operators.py
